--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+dns-lookup = "2.0.4"
 futures = "0.3.31"
 pnet = "0.35.0"
 tokio = { version = "1", features = ["full"] }
