--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 dns-lookup = "2.0.4"
 futures = "0.3.31"
 pnet = "0.35.0"
+clap = { version = "4.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
