--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ futures = "0.3.31"
 pnet = "0.35.0"
 clap = { version = "4.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
+indicatif = "0.17.8"
