--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ pnet = "0.35.0"
 clap = { version = "4.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 indicatif = "0.17.8"
+serde = { version="1.0.215", features = ["derive"] }
+serde_json = "1.0.132"
