--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ tokio = { version = "1", features = ["full"] }
 indicatif = "0.17.8"
 serde = { version="1.0.215", features = ["derive"] }
 serde_json = "1.0.132"
+ipnet = "2.10.1"
