--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ indicatif = "0.17.8"
 serde = { version="1.0.215", features = ["derive"] }
 serde_json = "1.0.132"
 ipnet = "2.10.1"
+surge-ping = "0.8.1"
+rand = "0.8.5"
