--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-dns-lookup = "2.0.4"
 futures = "0.3.31"
 pnet = "0.35.0"
 clap = { version = "4.0", features = ["derive"] }
@@ -15,3 +14,4 @@ serde_json = "1.0.132"
 ipnet = "2.10.1"
 surge-ping = "0.8.1"
 rand = "0.8.5"
+trust-dns-resolver = { version = "0.21", features = ["tokio-runtime"] }
