--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,4 @@ serde_json = "1.0.132"
 ipnet = "2.10.1"
 surge-ping = "0.8.1"
 rand = "0.8.5"
-trust-dns-resolver = { version = "0.21", features = ["tokio-runtime"] }
+dns-lookup = "2.0.4"
